--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 language: ruby
 cache: bundler
+sudo: false
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1.0
+  - 2.2.5
+  - 2.3.1
 gemfile:
   - Gemfile
-  - gemfiles/rails-3.2.gemfile
-  - gemfiles/rails-4.0.gemfile
+  - gemfiles/rails-4.1.gemfile
+  - gemfiles/rails-4.2.gemfile
+  - gemfiles/rails-5.0.gemfile
   - gemfiles/rails-master.gemfile
 matrix:
   include:
-    - rvm: 1.8.7
+    - rvm: 2.1.9
       gemfile: gemfiles/rails-3.2.gemfile
+  fast_finish: true
